--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -1551,7 +1551,8 @@
           "icon_1_category": "Icon with text 1",
           "icon_2_category": "Icon with text 2",
           "icon_3_category": "Icon with text 3",
-          "icon_4_category": "Icon with text 4"
+          "icon_4_category": "Icon with text 4",
+          "icon_5_category": "Icon with text 5"
         },
         "liquid": {
           "name": "Liquid"
